--- a/4th_Grade_Projection_File_Organization.ipynb
+++ b/4th_Grade_Projection_File_Organization.ipynb
@@ -30,7 +30,7 @@
    ],
    "source": [
     "# Directory to save the new files\n",
-    "output_dir = '/Users/jasonhorne/4thGradeProjections/School_Files/'\n",
+    "output_dir = '/Your/Directory/'\n",
     "\n",
     "# Iterate through each group (school) and save to a new Excel file\n",
     "for school_name, group in df.groupby('school_name'):\n",
