--- a/3-8_QuickScores.ipynb
+++ b/3-8_QuickScores.ipynb
@@ -11,7 +11,7 @@
     "import numpy as np\n",
     "\n",
     "# Read in the data file\n",
-    "data = pd.read_csv(\"/Users/jasonhorne/QuickScores/3-8TCAP.csv\")\n",
+    "data = pd.read_csv(\"/Your/Directory/3-8TCAP.csv\")\n",
     "\n",
     "#columns to keep\n",
     "columns_to_keep = [\"SchoolName\", \"LastName\", \"FirstName\", \"MiddleInitial\", \"USID\", \"EnrolledGrade\", \"ContentAreaCode\", \"TeacherOfRecordLastName\", \"TeacherOfRecordFirstName\", \"TotalRawScore\", \"TotalPointPossible\"]\n",
@@ -37,7 +37,7 @@
     "import pandas as pd\n",
     "\n",
     "# Read in the data file\n",
-    "data = pd.read_csv(\"/Users/jasonhorne/QuickScores/3-8TCAP_modified.csv\")\n",
+    "data = pd.read_csv(\"/Your/Directory/3-8TCAP_modified.csv\")\n",
     "\n",
     "# Find the unique school names\n",
     "unique_schools = data[\"SchoolName\"].unique()\n",
