Update EOC Files by Teacher.ipynb

--- a/EOC Files by Teacher.ipynb
+++ b/EOC Files by Teacher.ipynb
@@ -80,7 +80,7 @@
     "data[\"TeacherSubject\"] = data[\"TeacherOfRecordLastName\"] + \"_\" + data[\"ContentAreaCode\"]\n",
     "\n",
     "# Create the folder to store the teacher files if it doesn't exist\n",
-    "output_folder = \"/Users/jasonhorne/QuickScores/Teacher_Files\"\n",
+    "output_folder = \"/Your/Directory\"\n",
     "os.makedirs(output_folder, exist_ok=True)\n",
     "\n",
     "# Loop over each unique teacher-subject combination and save the filtered data to a separate file\n",
