--- a/EOC_Quickscores.ipynb
+++ b/EOC_Quickscores.ipynb
@@ -64,7 +64,7 @@
     "    school_data = school_data[cols]\n",
     "    \n",
     "    # Save the data to a CSV file\n",
-    "    filename = \"/Users/jasonhorne/QuickScores/{}.csv\".format(school)\n",
+    "    filename = \"/Your/Directory/{}.csv\".format(school)\n",
     "    school_data.to_csv(filename, index=False)\n"
    ]
   },
